# WEB_HW_13

./: README.md  draft.py  main.py  pyproject.toml
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py
